--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* id.po: Update from Arif E. Nugroho <arif_endro@yahoo.com>.
+	* zh_CN.po: Update from Ji ZhengYu <zhengyuji@gmail.com>.
+
 2008-09-28  Bruno Haible  <bruno@clisp.org>
 
 	* Rules-quot (.insert-header.po-update-en): Pass the locale name with
