--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.c (po_message_comments, po_message_extracted_comments):
+	Update after string_list_join changed.
+
 2008-10-04  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.h.in (po_message_is_range, po_message_set_range): New
