--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* msgfmt.texi: Describe the effect of combining --statistics with
+	--verbose.
+
 2008-11-14  Bruno Haible  <bruno@clisp.org>
 
 	* msgfilter.texi: Document the environment variables MSGFILTER_MSGCTXT,
