--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2009-01-25  Bruno Haible  <bruno@clisp.org>
 
+	Fix bug introduced on 2005-10-01.
+	* msgl-charset.c (compare_po_locale_charsets): Fix recognition of
+	header entry.
+
+2009-01-25  Bruno Haible  <bruno@clisp.org>
+
 	Fix bug introduced on 2008-10-04.
 	* read-catalog-abstract.c (po_parse_comment_special): Initialize
 	*rangep.
