--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-25  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a test suite failure on platforms that have a gl_IE locale.
+	* msginit-1: Normalize the charset of the generated PO file.
+
 2008-10-04  Bruno Haible  <bruno@clisp.org>
 
 	* msgfmt-17: New file.
