--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -9,6 +9,7 @@
 	Fix bug introduced on 2008-10-04.
 	* read-catalog-abstract.c (po_parse_comment_special): Initialize
 	*rangep.
+	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.
 
 2009-01-18  Bruno Haible  <bruno@clisp.org>
 
