--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,13 @@
 2009-01-25  Bruno Haible  <bruno@clisp.org>
 
+	* threadlib.c: Include <stdlib.h>.
+
+2009-01-25  Bruno Haible  <bruno@clisp.org>
+
+	* threadlib.c (dummy): New declaration.
+
+2009-01-25  Bruno Haible  <bruno@clisp.org>
+
 	Don't install charset.alias on MacOS X >= 10.3.
 	* localcharset.c (DARWIN7): New macro.
 	(get_charset_aliases): Hardcode the result for Darwin7.
