--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-27  Bruno Haible  <bruno@clisp.org>
+
+	* hello-c++-qt/po/Makefile.am (XGETTEXT_OPTIONS): Add more options for
+	the tr function, for compatibility with Qt 4.
+
 2009-01-18  Bruno Haible  <bruno@clisp.org>
 
 	* hello-c++-qt/po/Makefile.am (.po.gmo): Pass --verbose to msgfmt when
