--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-06  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in (libintl.res): Initialize nl without assuming GNU bash.
+	Reported by Marko Lindqvist <cazfi74@gmail.com>.
+
 2009-01-25  Bruno Haible  <bruno@clisp.org>
 
 	* threadlib.c: Include <stdlib.h>.
