--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,12 @@
+2009-02-23  Bruno Haible  <bruno@clisp.org>
+
+	Fix invalid read past end of memory block.
+	* vasnprintf.c (DCHAR_SET): Define.
+	(local_wcslen): Define only when needed.
+	(local_strnlen, local_wcsnlen): New functions.
+	(VASNPRINTF) [!USE_SNPRINTF && HAVE_WCHAR_T]: Implement the %s and %ls
+	directives that involve a conversion ourselves.
+
 2009-02-06  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (libintl.res): Initialize nl without assuming GNU bash.
