--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-23  Bruno Haible  <bruno@clisp.org>
+
+	* intl.m4 (AM_INTL_SUBDIR): Also check for strnlen, wcsnlen, mbrtowc,
+	wcrtomb.
+
 2009-01-14  Bruno Haible  <bruno@clisp.org>
 
 	* intl.m4: More consistent m4 quoting.
