--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-27  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in.in (Makefile): Use @SHELL@, not $(SHELL).
+	Reported by Scott James Remnant <scott@ubuntu.com>.
+
 2009-01-18  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in.in (.po.gmo): Pass --verbose to msgfmt when producing
