--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,7 +1,7 @@
 2009-03-25  Bruno Haible  <bruno@clisp.org>
 
 	Fix the handling of Windows resources in shared libraries.
-	* configure.ac: Invoke LT_LANG for 'WIndows Resource'.
+	* configure.ac: Invoke LT_LANG for 'Windows Resource'.
 
 2009-01-14  Bruno Haible  <bruno@clisp.org>
 
