--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-29  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (PO Files): Mention gfc-internal-format.
+	(gfc-internal-format): New subsection.
+
 2009-02-15  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (MO Files): Update w.r.t. the maximum revision in use.
