--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,10 @@ Version 0.18 - January 2008
   xgettext command-line options for this case are:
     --qt --keyword=tr:1,1t --keyword=tr:1,2c,2t --keyword=tr:1,1,2c,3t
 
+* xgettext --language=GCC-source now recognizes also the format strings
+  used in the Fortran front-end of the GCC compiler, and marks them as
+  'gfc-internal-format'.
+
 * Updated the meaning of 'gcc-internal-format' to match GCC 4.3.
 
 Version 0.17 - November 2007
