--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-08  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (CLEANFILES): Remove variable. Not needed any more 
+
 2009-04-07  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (SUFFIXES): Remove variable. Not needed any more since
