Move macro gt_GLOBAL_SYMBOL_PIPE to exported.m4.

--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-11  Bruno Haible  <bruno@clisp.org>
+
+	* exported.m4: New file, extracted from ../configure.ac.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2009-01-25  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (EXTRA_DIST): Remove locale-ja.m4.
