--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-11  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac (gt_GLOBAL_SYMBOL_PIPE): Remove macro, moved to
+	m4/exported.m4.
+
 2009-03-25  Bruno Haible  <bruno@clisp.org>
 
 	Fix the handling of Windows resources in shared libraries.
