--- a/autoconf-lib-link/m4/ChangeLog
+++ b/autoconf-lib-link/m4/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-26  Bruno Haible  <bruno@clisp.org>
+
+	* lib-link.m4 (AC_LIB_HAVE_LINKFLAGS): Accept a fifth argument.
+
 2009-01-14  Jim Meyering  <meyering@redhat.com>
 
 	* lib-link.m4: More consistent m4 quoting.
