--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-26  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): Update after the calling convention of
+	u*_conv_from_encoding and u*_conv_to_encoding changed.
+
 2009-03-25  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (RC): New variable.
