--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-26  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): Update after the calling convention of
+	u*_conv_from_encoding and u*_conv_to_encoding changed.
+
 2009-04-08  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (SUFFIXES, CLEANFILES): Remove variables. Not needed any
