--- a/autoconf-lib-link/m4/ChangeLog
+++ b/autoconf-lib-link/m4/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-26  Bruno Haible  <bruno@clisp.org>
 
+	Make the lib vs. lib64 recognition work on openSUSE 11 with "gcc -m32".
+	* lib-prefix.m4 (AC_LIB_PREPARE_MULTILIB): Ignore paths that end in
+	"../" or "..".
+
+2009-04-26  Bruno Haible  <bruno@clisp.org>
+
 	* lib-link.m4 (AC_LIB_HAVE_LINKFLAGS): Accept a fifth argument.
 
 2009-01-14  Jim Meyering  <meyering@redhat.com>
