--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,14 @@
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	Avoid redefinition warnings for SIZE_MAX.
+	* size_max.m4 (gl_SIZE_MAX): Avoid redefining SIZE_MAX in config.h.
+	Reported by Simon Josefsson.
+
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* size_max.m4 (gl_SIZE_MAX): Use AC_CACHE_CHECK instead of
+	AC_CACHE_VAL.
+
 2009-02-23  Bruno Haible  <bruno@clisp.org>
 
 	* intl.m4 (AM_INTL_SUBDIR): Also check for strnlen, wcsnlen, mbrtowc,
