--- a/gettext-runtime/tests/ChangeLog
+++ b/gettext-runtime/tests/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (AUTOMAKE_OPTIONS): Add 1.11 and color-tests.
+
 2008-09-28  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (test_lock_SOURCES): Add threadlib.c.
