--- a/gettext-tools/gnulib-tests/ChangeLog
+++ b/gettext-tools/gnulib-tests/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (AUTOMAKE_OPTIONS): Add 1.11 and color-tests.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
