--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,12 @@
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (AUTOMAKE_OPTIONS): Add 1.11 and color-tests.
+
+2009-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext-glade-4: New file.
+	* Makefile.am (TESTS): Add it.
+
 2009-03-29  Bruno Haible  <bruno@clisp.org>
 
 	* format-gfc-internal-1: New file.
