Use color-tests option.

--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* tests/Makefile.am (AUTOMAKE_OPTIONS): Add 1.11 and color-tests.
+
 2009-01-14  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: More consistent m4 quoting.
