--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* m4/init-package-version.m4: New file.
 	* configure.ac: Invoke gl_INIT_PACKAGE. Use the preferred form of
 	AM_INIT_AUTOMAKE.
+	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
+	* autogen.sh: Update aclocal invocation.
 
 2009-05-21  Bruno Haible  <bruno@clisp.org>
 
