--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,10 @@
+2009-05-23  Bruno Haible  <bruno@clisp.org>
+
+	Avoid gcc warning "cast from pointer to integer of different size".
+	* lib/glibconfig.in.h (GPOINTER_TO_INT, GINT_TO_POINTER): Cast through
+	intptr_t.
+	(GPOINTER_TO_UINT, GUINT_TO_POINTER: Cast through uintptr_t.
+
 2009-05-01  Bruno Haible  <bruno@clisp.org>
 
 	Avoid compiler warnings when redefining macros defined by <libintl.h>.
