--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-06  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Pass package and version to AC_INIT instead of
+	AM_INIT_AUTOMAKE.
+
 2009-05-21  Bruno Haible  <bruno@clisp.org>
 
 	Assume automake >= 1.10.2.
