--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,6 +1,7 @@
 2009-06-06  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.
+	* Makefile.am (libasprintf.la): Silence 'make' output if silent-rules.
 
 2009-06-06  Bruno Haible  <bruno@clisp.org>
 
