--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-29  Bruno Haible  <bruno@clisp.org>
+
+	Avoid lang-c++ test failure.
+	* configure.ac: Invoke LT_LANG also for C++.
+
 2009-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.
