--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-31  Bruno Haible  <bruno@clisp.org>
+
+	* doc/Makefile.am: Use dist-hook instead of old distdir hack.
+	* configure.ac (doc/Makefile.am): Don't invoke FIX_MAKEFILE_DISTRIB.
+
 2009-05-29  Bruno Haible  <bruno@clisp.org>
 
 	Avoid lang-c++ test failure.
