--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-11  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Mark Keywords): Add cross-section references.
+	Reported by David Bruce <davidstuartbruce@gmail.com>.
+
 2009-05-01  Bruno Haible  <bruno@clisp.org>
 
 	Undo 2005-02-23 change.
