--- a/autoconf-lib-link/m4/ChangeLog
+++ b/autoconf-lib-link/m4/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-24  Bruno Haible  <bruno@clisp.org>
+
+	* lib-link.m4 (AC_LIB_HAVE_LINKFLAGS): Fix description of
+	HAVE_LIB${NAME} macro.
+	Reported by Sam Steingold <sds@gnu.org>.
+
 2009-06-21  Bruno Haible  <bruno@clisp.org>
 
 	Make two consecutive identical invocations of AC_LIB_HAVE_LINKFLAGS
