--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-25  Bruno Haible  <bruno@clisp.org>
+
+	* de.po: Update from Karl Eichwalder <ke@suse.de>.
+
 2009-06-08  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in.in (install-data-yes, installdirs-data-yes): Remove
