--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,10 @@
+2009-07-29  Bruno Haible  <bruno@clisp.org>
+
+	* po/lv.po: New file, from Rihards Priedītis <rprieditis@gmail.com>.
+	* po/LINGUAS: Add lv.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESPOFILES): Add the new message catalogs.
+
 2009-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.
