--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-04  Bruno Haible  <bruno@clisp.org>
+
+	Port msgfilter to Woe32 platforms.
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add pipe-filter-ii.
+
 2009-08-03  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh: Remove statements to fix permissions. Now fixed in git.
