--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,8 @@ Version 0.18 - January 2008
   used in the Fortran front-end of the GCC compiler, and marks them as
   'gfc-internal-format'.
 
+* autopoint can now be used to update several PO directories all together.
+
 * Updated the meaning of 'gcc-internal-format' to match GCC 4.3.
 
 * Portability:
