--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,9 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	Avoid gcc warning on Cygwin.
+	* lib/html-ostream.oo.c (html_ostream::write_mem): Change type of local
+	variable 'uc'.
+
 2009-05-23  Bruno Haible  <bruno@clisp.org>
 
 	Avoid gcc warning "cast from pointer to integer of different size".
