--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a test failure on Cygwin.
+	* msginit-1: Replace also CP1252 label with ASCII.
+
 2009-07-27  Часлав Илић (Chusslove Illich)  <caslav.ilic@gmx.net>
             Bruno Haible  <bruno@clisp.org>
 
