--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh: Avoid the 'hash-tests' module. It corresponds to an
+	incompatible 'hash' module.
+
 2009-08-04  Bruno Haible  <bruno@clisp.org>
 
 	Port msgfilter to Woe32 platforms.
