--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	* woe32dll/gettextsrc-exports.c: Export formatstring_gfc_internal,
+	formatstring_qt_plural.
+
 2009-05-31  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (doc/Makefile.am): Don't invoke FIX_MAKEFILE_DISTRIB.
