--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (DCHAR_SET): Undefine at the end.
+
 2009-08-09  Bruno Haible  <bruno@clisp.org>
 
 	Fix a compilation error on non-glibc systems that have gcc visibility
