--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-10  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (DCHAR_SET): Undefine at the end.
+
 2009-06-06  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.
