--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-13  Bruno Haible  <bruno@clisp.org>
+
+	* msgexec.c: Include msgl-charset.h.
+	(main): Invoke compare_po_locale_charsets.
+
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
 	Avoid a gcc warning.
