Filter out a warning about locale charset.

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -2,6 +2,7 @@
 
 	* msgexec-1: Filter out msgexec's warning about locale charset.
 	* msgexec-2: Likewise.
+	* msgexec-4: Likewise.
 
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
