--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-14  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a warning message on Cygwin.
+	* msggrep-7: Filter out msggrep's warning about locale charset.
+
 2009-08-13  Bruno Haible  <bruno@clisp.org>
 
 	* msgexec-1: Filter out msgexec's warning about locale charset.
