Fix an error when running autogen.sh for the first time.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-14  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh: Create gettext-tools/intl directory before running
+	automake.
+
 2009-08-12  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh (GNULIB_MODULES_RUNTIME_FOR_SRC,
