--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-14  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (archive.tar.gz): Update error message.
+
 2009-08-09  Bruno Haible  <bruno@clisp.org>
 
 	Add support for multiple PO directories to autopoint.
